# bentekkie-mainframe

./: .bazelignore  .bazeliskrc  .bazelrc  .dockerignore  .env  .eslintrc.js  .gitignore  .project  BUILD.bazel  ClientServer.js  Dockerfile  LICENSE  MODULE.bazel  Makefile  README.md  SocketServer.js  WORKSPACE  app.js  appspec.yml  ascii_art.txt  aws-config.json  bentekkie_mainframe_suite_test.go  buf.gen.yaml  build-docker.sh  buildspec.yml  cmds.js  command_test.go  db.js  db.schema.json  dbtest.js  dbutils.js  deps.bzl  disk.js  docker-compose-dev.yml  docker-compose.yml  editdisk.js  fresh.conf  generateProto.bat  generateProto.sh  go.mod  (+16 more)
.ebextensions/: https-instance.config  iptables.config  letsencrypt.config
.elasticbeanstalk/: config.yml
.github/workflows/: build.yaml  main.yaml
autocomp/: index.js
client/: .eslintrc  package-lock.json  package.json  tsconfig.json
client/public/: index.html  manifest.json
client/src/: App.js  App.tsx  AppContext.tsx  AppContextTypes.ts  CommandBar.css  CommandBar.js  CommandBar.tsx  EditFile.css  EditFile.js  EditModal.tsx  Editor.js  LoginModal.css  LoginModal.tsx  Nano.css  Nano.js  Terminal.css  Terminal.js  Terminal.tsx  Window.css  Window.js  Window.tsx  api.tsx  utils.ts
clientnext/: BUILD.bazel  defs.bzl  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
clientnext/public/: BUILD.bazel  manifest.webmanifest
clientnext/src/lib/: App.tsx  AppContext.tsx  AppContextTypes.ts  BUILD.bazel  CommandBar.tsx  EditModal.tsx  LoginModal.tsx  Terminal.tsx  Window.tsx  api.tsx  use-client.tsx  utils.ts
clientnext/src/pages/: BUILD.bazel  _app.tsx  index.tsx
clientnext/src/styles/: BUILD.bazel  CommandBar.css
commands/: index.js
deploy/: application_start.sh  before_install.sh  validate_service.sh
editor/: package.json
editor/src/: App.js  Browser.css  Browser.js  EditFile.js  Editor.css
files/: about-me.html  contact-info.html  education.html  experience.html  help.html  projects.html  skills.html  start.html  volunteering.html
files/help/: cat.html  cd.html  clear.html  download-resume.html  guest-book.html  help.html  landing-page.html  ls.html  tooSmall.html
hidden/: a-new-hope.html  ascii-portrait.html  first-game.html
messages/: command.proto
proto/command/v1/: BUILD.bazel  command.pb.go  command.proto
proto/command/v1/commandv1connect/: BUILD.bazel  command.connect.go
public/client/: Quebecgame.swf  a-new-hope.html
public/javascripts/: Squire-UI.js  ZnarIFZvGPPJ1Pdf.medium  edit.js  main.js  new-file.js
public/stylesheets/: style.css
routes/: api.js  autocomp.js  cmdwindow.js  editor.js  file.js  gb.js  help.js  index.js
server/: BUILD.bazel  main.go
server/auth/: BUILD.bazel  auth.go
server/db/: BUILD.bazel  db.go  scema.sql  seed.go
server/env/: BUILD.bazel  env.go
server/mainframe/: BUILD.bazel  help_text.go  shell_service.go
server/middleware/: grpcWeb.go
tools/: gopackagesdriver.sh
views/: cmd.jade  editor.jade  folders.jade  gb.jade  help-info.jade  help.jade  index.jade  layout.jade
