load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mainframe",
    srcs = [
        "help_text.go",
        "shell_service.go",
    ],
    importpath = "github.com/bentekkie/bentekkie-mainframe/server/mainframe",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/command/v1:commandv1_go_proto",
        "//server/auth",
        "//server/db",
        "@com_connectrpc_connect//:connect",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
