load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "lib",
    srcs = glob([
        "*.tsx",
        "*.ts",
    ]),
    allow_js = False,
    declaration = True,
    incremental = True,
    resolve_json_module = True,
    tsconfig = "//clientnext:tsconfig",
    visibility = ["//clientnext:__subpackages__"],
    deps = [
        "//clientnext:node_modules/@bufbuild/connect",
        "//clientnext:node_modules/@bufbuild/connect-web",
        "//clientnext:node_modules/@types/google-protobuf",
        "//clientnext:node_modules/@types/react",
        "//clientnext:node_modules/@types/react-dom",
        "//clientnext:node_modules/@types/react-modal",
        "//clientnext:node_modules/google-protobuf",
        "//clientnext:node_modules/next",
        "//clientnext:node_modules/react-cookie",
        "//clientnext:node_modules/react-markdown",
        "//clientnext:node_modules/react-mde",
        "//clientnext:node_modules/react-modal",
        "//clientnext:node_modules/remark-gfm",
        "//clientnext/src/gen",
    ],
)
