load("//clientnext:defs.bzl", "next_ts_project")

next_ts_project(
    name = "lib",
    srcs = glob([
        "*.tsx",
        "*.ts",
    ]),
    deps = [
        "//clientnext:node_modules/@bufbuild/connect",
        "//clientnext:node_modules/@bufbuild/connect-web",
        "//clientnext:node_modules/@types/google-protobuf",
        "//clientnext:node_modules/@types/react",
        "//clientnext:node_modules/@types/react-dom",
        "//clientnext:node_modules/@types/react-modal",
        "//clientnext:node_modules/google-protobuf",
        "//clientnext:node_modules/next",
        "//clientnext:node_modules/react-cookie",
        "//clientnext:node_modules/react-markdown",
        "//clientnext:node_modules/react-mde",
        "//clientnext:node_modules/react-modal",
        "//clientnext:node_modules/remark-gfm",
        "//clientnext/src/gen",
    ],
)
