load("//clientnext:defs.bzl", "next_ts_project")

next_ts_project(
    name = "pages",
    srcs = glob([
        "*.tsx",
        "*.ts",
    ]),
    deps = [
        "//clientnext:node_modules/@types/react",
        "//clientnext:node_modules/@types/react-dom",
        "//clientnext:node_modules/next",
        "//clientnext/src/lib",
    ],
)
