load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

go_proto_library(
    name = "commandv1_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/bentekkie/bentekkie-mainframe/proto/command/v1",
    proto = ":commandv1_proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "commandv1_proto",
    srcs = ["command.proto"],
    visibility = ["//visibility:public"],
    deps = ["@protobuf//:empty_proto"],
)

exports_files(["command.proto"])
